allow for zoom on mobile!  set viewport to position fixed on mobile

--- a/styl/state-common.styl
+++ b/styl/state-common.styl
@@ -13,6 +13,7 @@
 
 @media (max-width: 767px) 
   #viewport
+    position: fixed
 
     #fa-app
       height 1366px
